--- a/Brainf_ck-sharp.UWP/Styles/MiscStyles.xaml
+++ b/Brainf_ck-sharp.UWP/Styles/MiscStyles.xaml
@@ -201,11 +201,16 @@
                                     HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                     VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
                                     AutomationProperties.AccessibilityView="Raw"/>
-                                <Grid Grid.Column="1">
-                                    <Grid.Clip>
+                                <Border Grid.Column="1">
+                                    <Border.Clip>
                                         <RectangleGeometry Rect="0,0,48,48"/>
-                                    </Grid.Clip>
+                                    </Border.Clip>
                                     <ContentPresenter
+                                        Height="80"
+                                        Width="80"
+                                        HorizontalAlignment="Center"
+                                        VerticalAlignment="Center"
+                                        Margin="-16"
                                         Content="{TemplateBinding AnimatedIndicatorContent}"
                                         ContentTemplate="{TemplateBinding AnimatedIndicatorContentTemplate}"
                                         Style="{TemplateBinding AnimatedIndicatorStyle}"
@@ -216,7 +221,7 @@
                                             <RotateTransform x:Name="AnimatedIndicatorRotate"/>
                                         </ContentPresenter.RenderTransform>
                                     </ContentPresenter>
-                                </Grid>
+                                </Border>
                             </Grid>
                             <Canvas
                                 Grid.ColumnSpan="2"
