Debug button brush adjusted

--- a/Brainf_ck-sharp.UWP/Resources/BrushesDictionary.xaml
+++ b/Brainf_ck-sharp.UWP/Resources/BrushesDictionary.xaml
@@ -15,6 +15,7 @@
     
     <!--Red danger brush-->
     <SolidColorBrush x:Key="PlayButtonBrush" Color="#FF008000"/>
+    <SolidColorBrush x:Key="DebugButtonBrush" Color="#FFD1212A"/>
     <SolidColorBrush x:Key="RedDangerBrush" Color="#FFDC232B"/>
     
     <!--Breakpoints-->
