Minor UI improvements to the bottom bar

--- a/Brainf_ck-sharp.UWP/UserControls/BottomEdgeInfoBar.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/BottomEdgeInfoBar.xaml
@@ -132,7 +132,7 @@
                     <VisualState.Setters>
                         <Setter 
                             Target="FileBlock.FontWeight"
-                            Value="SemiLight"/>
+                            Value="Normal"/>
                     </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="IDEPendingChangesState">
@@ -189,7 +189,7 @@
             Foreground="White"
             Margin="8,0,0,0"
             FontSize="12"
-            FontWeight="SemiLight"
+            FontWeight="Normal"
             VerticalAlignment="Center"
             Style="{StaticResource TrimmedTextStyle}"/>
         
@@ -206,7 +206,7 @@
                 Foreground="White"
                 Margin="8,0,8,0"
                 FontSize="12"
-                FontWeight="SemiLight"
+                FontWeight="Normal"
                 VerticalAlignment="Center"
                 Style="{StaticResource TrimmedTextStyle}"/>
         </Grid>
@@ -220,7 +220,7 @@
             FontSize="12"
             VerticalAlignment="Center"
             IsTextScaleFactorEnabled="False"
-            FontWeight="SemiLight"
+            FontWeight="Normal"
             Grid.Column="1">
             <Run Text="Error"/>
             <Run 
@@ -237,7 +237,7 @@
             FontSize="12"
             VerticalAlignment="Center"
             IsTextScaleFactorEnabled="False"
-            FontWeight="SemiLight"
+            FontWeight="Normal"
             Grid.Column="2">
             <Run Text="Error"
                  x:Uid="ErrorRun"/>
@@ -253,7 +253,7 @@
                    VerticalAlignment="Center"
                    IsTextScaleFactorEnabled="False"
                    Grid.Column="3"
-                   FontWeight="SemiLight"
+                   FontWeight="Normal"
                    x:Name="RowBlock"
                    Visibility="Collapsed">
             <Run Text="Row"
@@ -270,7 +270,7 @@
             FontSize="12"
             VerticalAlignment="Center"
             IsTextScaleFactorEnabled="False"
-            FontWeight="SemiLight"
+            FontWeight="Normal"
             Grid.Column="4"
             Visibility="Collapsed">
             <Run Text="Col"/>
@@ -287,7 +287,7 @@
             FontSize="12"
             VerticalAlignment="Center"
             IsTextScaleFactorEnabled="False"
-            FontWeight="SemiLight"
+            FontWeight="Normal"
             Grid.Column="4">
             <Run Text="Char"/>
             <Run 
@@ -322,7 +322,7 @@
                 Grid.Column="1"
                 TextWrapping="NoWrap"
                 TextTrimming="CharacterEllipsis"
-                FontWeight="SemiLight"
+                FontWeight="Normal"
                 MaxLines="1"/>
         </Grid>
         
