--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/DevInfo/ReviewPromptFlyout.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/DevInfo/ReviewPromptFlyout.xaml
@@ -41,46 +41,44 @@
         </TextBlock>
 
         <!--Emojis-->
-        <inheritedControls:LightBorderAndBackgroundOverlay Margin="0,12,0,0">
+        <Grid
+            Margin="0,12,0,0"
+            Height="140">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Button
-                Style="{StaticResource WideButtonWithNoBackgroundStyle}"
+                Style="{StaticResource WideButtonWithNoBackgroundAndInlineBorder}"
                 Click="SadButton_Click"
                 x:Name="SadButton">
                 <inheritedControls:LightBorderAndBackgroundOverlay
-                    Margin="-2"
                     LightBorderThickness="2"
                     LightBorderBrush="{StaticResource BorderLightBrush}"
                     LightBackgroundBrush="{StaticResource ElementsWideLightBrush}">
                     
                     <!--Sad-->
                     <TextBlock
-                        Margin="12"
                         Text="😣"
                         Style="{StaticResource EmojyBlockStyle}"/>
                 </inheritedControls:LightBorderAndBackgroundOverlay>
             </Button>
             <Button
                 Grid.Column="1"
-                Style="{StaticResource WideButtonWithNoBackgroundStyle}"
+                Style="{StaticResource WideButtonWithNoBackgroundAndInlineBorder}"
                 Click="HappyButton_Click"
                 x:Name="HappyButton">
                 <inheritedControls:LightBorderAndBackgroundOverlay
-                    Margin="-2"
                     LightBorderThickness="2"
                     LightBorderBrush="{StaticResource BorderLightBrush}"
                     LightBackgroundBrush="{StaticResource ElementsWideLightBrush}">
                     
                     <!--Happy-->
                     <TextBlock
-                        Margin="12"
                         Text="😄"
                         Style="{StaticResource EmojyBlockStyle}"/>
                 </inheritedControls:LightBorderAndBackgroundOverlay>
             </Button>
-        </inheritedControls:LightBorderAndBackgroundOverlay>
+        </Grid>
     </StackPanel>
 </UserControl>
