--- a/Brainf_ck-sharp.UWP/Styles/MenuFlyoutStyles.xaml
+++ b/Brainf_ck-sharp.UWP/Styles/MenuFlyoutStyles.xaml
@@ -283,7 +283,7 @@
                                        Foreground="{TemplateBinding Foreground}" 
                                        HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" 
                                        VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                                       FontWeight="SemiLight"
+                                       FontWeight="Normal"
                                        FontSize="{StaticResource MenuFlyoutTextSize}"/>
                         </StackPanel>
                     </inheritedControls:LightBorderAndBackgroundOverlay>
